--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,10 @@ a {
   text-decoration: none;
 }
 
+.more-menu-container .cursor {
+  display: none;
+}
+
 .animate-blink {
   animation: blink 1s steps(3, start) infinite;
 }
